<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/labelSubTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCheckout">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/buttonPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/button_payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/labelCheckout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/label_checkout"
        android:textSize="@dimen/fontSizeL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelCheckoutTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/label_checkout_total"
        app:layout_constraintBottom_toTopOf="@+id/buttonPayment"
        app:layout_constraintEnd_toStartOf="@+id/textCheckoutPrice" />

    <TextView
        android:id="@+id/textCheckoutPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/default_checkout_price"
        app:layout_constraintBottom_toTopOf="@+id/buttonPayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPayment" />

    <TextView
        android:id="@+id/textCheckoutSubTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/default_checkout_subtotal"
        app:layout_constraintBottom_toTopOf="@+id/textCheckoutPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPayment" />

    <TextView
        android:id="@+id/labelSubTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/label_checkout_subtotal"
        app:layout_constraintBottom_toTopOf="@+id/labelCheckoutTotal"
        app:layout_constraintEnd_toStartOf="@+id/textCheckoutSubTotal" />


</androidx.constraintlayout.widget.ConstraintLayout>